<resources>
    <string name="app_name">Words</string>
    <string name="default_egg_count">0</string>
    <string name="default_score">0</string>
    <string name="default_mode">Animals</string>
    <string name="banner_ad_home_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="game_over_text">Game Over</string>
    <string name="score_text">Score:</string>
    <string name="high_score_text">High Score:</string>
    <string name="new_high_score_text">New High Score!</string>
    <string name="well_done">Well Done!</string>
    <string name="press_to_retry">PRESS TO RETRY</string>
    <string name="alert_title_default">Are you sure?</string>
    <string name="cancel_default">Cancel</string>
    <string name="continue_default">Continue</string>

    <string name="difficulty_title">Difficulty</string>
    <string name="difficulty_discription">Change how long you get for each turn to either 10 or 30 seconds</string>
</resources>
