<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_game_over"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    android:gravity="center_horizontal"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    >

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/GameOverLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/game_over_text"
        android:textSize="50sp"
        android:textColor="#ffffff"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/ScoreHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:padding="20dp">
        <TextView
            android:id="@+id/ScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/ScoreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/HighScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score_text"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/HighScoreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/ButtonHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:id="@+id/HomeButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/home_icon"
            android:onClick="ReturnHome"/>
        <ImageButton
            android:id="@+id/RedoButton"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@drawable/redo_icon"
            android:padding="20dp"
            android:onClick="NewGame" />
        <ImageButton
            android:id="@+id/ResearchCenterButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/researchcenter_icon"
            android:onClick="OpenResearchCenter"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_home_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
