<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alert_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adriansarstedt.words2.AlertPopup">

    <LinearLayout
        android:id="@+id/PopupView"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/AlertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/alert_title_default"
            android:background="@drawable/info_tab_top" />

        <TextView
            android:id="@+id/AlertDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#cc381900"
            android:background="#eef8f6ed"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#eef8f6ed"
            android:gravity="center">

            <Button
                android:id="@+id/AlertCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:background="#cc381900"
                android:text="@string/cancel_default"
                android:onClick="Cancel"/>

            <Button
                android:id="@+id/AlertContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:background="#cc381900"
                android:text="@string/continue_default"
                android:onClick="Continue"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/info_tab_bottom"/>

    </LinearLayout>

</LinearLayout>
